2001-03-12  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (INCLUDES): Renamed from libautotrace_a_INCLUDES.
	Suggested by Martin.

	* HACKING: Write about releasing scheme.

	Updated by Martin.
	Message-ID: <3AAB952E.7A1CE3A9@gmx.net>.
	* autotrace.dsp: updated.

2001-03-11  Masatake YAMATO  <yamato@redhat.com>

	* input-png.c: Added arguments for png_get_color_type.

2001-03-09  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AA7F19A.C11E5BC2@gmx.net>.
	* autotrace.dsp: Updated.

2001-03-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Added -lm to LIBSWF_LDFLAGS.

	* autotrace-config.af(AF_DEF_LIBS): Added @LIBSWF_LDFLAGS@.

	* Makefile.am (autotrace_LDADD): Remove -lm.

2001-03-08  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <18838.984036759@www23.gmx.net>
	
	* NEWS: Updated.

2001-03-08  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Write the place where you can libming.
	
	* output-swf.h: Use triangle brackets instead of
	double quotes to include ming.h.

	* NEWS: Write about swf output.

	* configure.in: Added ming(swf) supports.

	* Makefile.am (EXTRA_DIST): Remove swf.h.
	(HAVE_LIBSWF): Added ming(swf) supports.

2001-03-08  Masatake YAMATO  <yamato@redhat.com>

	Kevin O' Gorman <k_ogorman@kompass.ie> updates swf output.
	
	* output.h: Added ".swf".

	* output.c: Addd swf handler.

	* output-swf.h: Updated.

	* output-swf.c: Updated.

2001-03-07  Masatake YAMATO  <yamato@redhat.com>

	* spline.h (LINEARTYPE): 
	(QUADRATICTYPE): 
	(CUBICTYPE): 
	(PARALLELELLIPSETYPE): 
	(ELLIPSETYPE): 
	(CIRCLETYPE): Aliases for the members of 
	_at_polynomial_degree.

	* autotrace.h (_at_polynomial_degree): Added AT_ prefix
	to enum symbols.

	Applied a patch from Martin.
	Message-ID: <3AA15F77.44F4ECAF@gmx.net>.

	* autotrace.h: Improved fitting speed, reduced number of
	fitting parameters.

	* fit.c: Likewise.

	* main.c: Likewise.

 	Applied a patch from Martin.